# pytest-patterns

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  pytest.ini  shell.nix  test_audit.py
examples/: test_examples.py
src/pytest_patterns/: __init__.py  plugin.py
tests/: conftest.py  test_basics.py  test_edge_cases.py
tests/fixtures/: ical-ordering.ical
