[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-patterns"
dynamic = ["version"]
description = 'pytest plugin to make testing complicated long string output easy to write and easy to debug'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Christian Theune", email = "ct@flyingcircus.io" },
]
classifiers = [
  "Framework :: Pytest",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/pytest-patterns#readme"
Issues = "https://github.com/unknown/pytest-patterns/issues"
Source = "https://github.com/unknown/pytest-patterns"

[project.entry-points.pytest11]
myproject = "pytest_patterns.plugin"

[tool.hatch.version]
path = "src/pytest_patterns/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest>=7",
  "pytest-cov",
]

[tool.hatch.envs.default.env-vars]
COV_CORE_SOURCE="src"
COV_CORE_CONFIG=".coveragerc"
COV_CORE_DATAFILE=".coverage.eager"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "pytest>=7",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy {args:src/pytest_patterns tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 80
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 80
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # pytest
  "ARG001", "S101",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["pytest_patterns"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["pytest_patterns", "tests"]
branch = true
parallel = true
omit = [
  "src/pytest_patterns/__about__.py",
]

[tool.coverage.paths]
pytest_patterns = ["src/pytest_patterns", "*/pytest-patterns/src/pytest_patterns"]
tests = ["tests", "*/pytest-patterns/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 80
